--- a/index.html
+++ b/index.html
@@ -2,10 +2,31 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Banco Preguntas (No Oficial)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.3.0/papaparse.min.js"></script>
 </head>
+<style>
+    @media (max-width: 768px) {
+            body, .form-label, .btn, .card-title, .card-footer {
+                font-size: 16px;
+            }
+            .btn {
+                padding: 10px 20px;
+                width: 100%;
+            }
+            .form-select {
+                height: 50px;
+            }
+            .mb-3 {
+                margin-bottom: 1rem;
+            }
+            .card {
+                margin-top: 20px;
+            }
+        }
+</style>
 <body class="bg-light">
     <div class="container-fluid py-1">
         <img src="logo.png" class="img-fluid" alt="...">
